@@ -1,15 +1,12 @@
 """HTTP Client for asyncio."""
 
-__all__ = ['request', 'HttpClient']
+__all__ = ['request']
 
 import asyncio
-import collections
 import http.cookies
 import io
 import json
 import mimetypes
-import random
-import time
 import urllib.parse
 import weakref
 import warnings
@@ -765,160 +762,3 @@ class ClientResponse:
             return None
 
         return loads(self._content.decode(self._get_encoding(encoding)))
-
-
-class HttpClient:
-    """Allow to use multiple hosts with same path. And automatically
-    mark failed hosts.
-    """
-
-    def __init__(self, hosts, *, method=None, path=None, ssl=False,
-                 conn_pool=True, conn_timeout=None, failed_timeout=5.0,
-                 resolve=True, resolve_timeout=360.0, keepalive_timeout=30,
-                 verify_ssl=True, loop=None):
-        super().__init__()
-
-        if isinstance(hosts, str):
-            hosts = (hosts,)
-
-        if not hosts:
-            raise ValueError('Hosts are required')
-
-        self._hosts = []
-        for host in hosts:
-            has_port = False
-            if isinstance(host, str):
-                if ':' in host:
-                    host, port = host.split(':')
-                    try:
-                        port = int(port)
-                        has_port = True
-                    except:
-                        raise ValueError('Port has to be integer: %s' % host)
-                else:
-                    port = 80
-            else:
-                has_port = True
-                host, port = host
-
-            self._hosts.append((host, port, has_port))
-
-        self._method = method
-        self._path = path
-        self._schema = 'https' if ssl else 'http'
-
-        self._failed = collections.deque()
-        self._failed_handle = None
-        self._failed_timeout = failed_timeout
-
-        if loop is None:
-            loop = asyncio.get_event_loop()
-        self._loop = loop
-
-        if conn_pool:
-            self._connector = aiohttp.TCPConnector(
-                share_cookies=True, conn_timeout=conn_timeout,
-                keepalive_timeout=keepalive_timeout,
-                resolve=resolve, verify_ssl=verify_ssl, loop=loop)
-
-            self._resolve_timeout = resolve_timeout
-            self._resolve_handle = self._loop.call_later(
-                self._resolve_timeout, self._cleanup_resolved_host)
-        else:
-            self._connector = None
-
-    def _cleanup_resolved_host(self):
-        if self._connector:
-            self._connector.clear_resolved_hosts()
-            self._resolve_handle.cancel()
-            self._resolve_handle = self._loop.call_later(
-                self._resolve_timeout, self._cleanup_resolved_host)
-
-    def _resurrect_failed(self):
-        now = int(time.time())
-
-        while self._failed:
-            if (now - self._failed[0][1]) >= self._failed_timeout:
-                self._hosts.append(self._failed.popleft()[0])
-            else:
-                break
-
-        if self._failed:
-            self._failed_handle = self._loop.call_later(
-                self._failed_timeout, self._resurrect_failed)
-        else:
-            self._failed_handle = None
-
-    @asyncio.coroutine
-    def request(self, method=None, path=None, *,
-                params=None,
-                data=None,
-                headers=None,
-                cookies=None,
-                files=None,
-                auth=None,
-                allow_redirects=True,
-                max_redirects=10,
-                encoding='utf-8',
-                version=aiohttp.HttpVersion11,
-                compress=None,
-                chunked=None,
-                expect100=False,
-                read_until_eof=True):
-
-        if method is None:
-            method = self._method
-        if path is None:
-            path = self._path
-
-        assert method is not None, 'request "method" is required.'
-        assert path is not None, 'request "path" is required.'
-
-        # if all hosts marked as failed try first from failed
-        if not self._hosts:
-            self._hosts.append(self._failed.popleft()[0])
-
-        url = ''
-        hosts = self._hosts
-
-        while hosts:
-            idx = random.randint(0, len(hosts)-1)
-
-            info = hosts[idx]
-            if info[2]:
-                url = urllib.parse.urljoin(
-                    '{}://{}:{}'.format(self._schema, info[0], info[1]), path)
-            else:
-                url = urllib.parse.urljoin(
-                    '{}://{}'.format(self._schema, info[0]), path)
-
-            try:
-                resp = yield from request(
-                    method, url, params=params, data=data, headers=headers,
-                    cookies=cookies, files=files, auth=auth,
-                    encoding=encoding, allow_redirects=allow_redirects,
-                    version=version, max_redirects=max_redirects,
-                    compress=compress, chunked=chunked,
-                    expect100=expect100, read_until_eof=read_until_eof,
-                    connector=self._connector, loop=self._loop)
-            except (aiohttp.ServerDisconnectedError, aiohttp.ClientError):
-                pass
-            else:
-                if 500 <= resp.status <= 600:
-                    self._cleanup_resolved_host()
-
-                return resp
-
-            if info in hosts:
-                # could be removed concurrently
-                hosts.remove(info)
-                self._failed.append((info, int(time.time())))
-                if not self._failed_handle:
-                    self._failed_handle = self._loop.call_later(
-                        self._failed_timeout, self._resurrect_failed)
-
-                if self._connector:
-                    self._connector.clear_resolved_hosts(info[0], info[1])
-
-        raise aiohttp.ClientConnectionError(
-            'All hosts are unreachable %s' % url)
